# scaffold

./: .dockerignore  .env.db.example  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_DESCRIPTION.md  Makefile  README.md  commitlint.config.mjs  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug---fix.md  feature.md
.github/workflows/: codeql.yml  compose-check.yaml  image-release.yaml  image-unstable.yaml  pre-commit.yaml  pull-request-approved.yaml  pull-request-conventional-title.yaml  tests.yml
docs/docmost/: .env.docmost  docker-compose.yaml
src/: __main__.py
src/core/: config.py  indexer.py  watcher.py
src/core/vector/: chunker.py  config.py  delete.py  index.py  retriever.py  splitter.py
src/database/: check.py  config.py  connection.py  health.py  repositories.py
src/database/models/: mixins.py  nodes.py  types.py
src/generator/: generator.py  graph_types.py  models.py  types.py
src/ignorer/: ignorer.py
src/mcp/: README_MCP_SERVER.md  mcp.py  server.py
src/parsers/python/: core.py  import_node_visitor.py  models.py  node_visitor.py  parser.py  utils.py
tests/: health_test.py
tests/integrations/: code_to_graph_generation_test.py  conftest.py  nested_ignore_test.py
tests/mcp/: conftest.py  test_mcp.py
tests/src/generator/: graph_types_test.py
