[tool.poetry]
name = "scaffold"
version = "0.1.0"
description = ""
authors = ["Beer Bears"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
neo4j = "^5.28.1"
pydantic-settings = "^2.10.0"
fastmcp = "^2.0.0"
neomodel = "^5.5.0"
langchain = "^0.3.26"
langchain-community = "^0.3.26"
sentence-transformers = "^4.1.0"
langchain-huggingface = "^0.3.0"
faiss-cpu = "^1.11.0"
langchain-chroma = "^0.2.4"
chromadb = "^1.0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.23.8"
pre-commit = "^4.2.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
