[tool.poetry]
name = "scaffold"
version = "0.1.0"
description = ""
authors = ["Beer Bears"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.41"
neo4j = "^5.28.1"
pydantic-settings = "^2.10.0"
asyncpg = "^0.30.0"
fastmcp = "^2.0.0"
neomodel = "^5.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.23.8"
pre-commit = "^4.2.0"
testcontainers = "^4.9.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
