[tool.poetry]
name = "scaffold"
version = "0.1.0"
description = ""
authors = ["Beer Bears"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
neo4j = "^5.28.1"
pydantic-settings = "^2.10.0"
fastmcp = "^2.10.1"
neomodel = "^5.5.0"
chromadb = "^1.0.13"
posthog = "<6.0.0"
torch = {version = "^2.4.0", source = "pytorch-cpu"}

llama-index-core = "^0.12.49"
llama-index-vector-stores-chroma = "^0.4.2"
llama-index-embeddings-huggingface = "^0.5.5"
llama-index-llms-openai = "^0.4.7"
pathspec = "^0.12.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pre-commit = "^4.2.0"
testcontainers = "^4.9.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
